# ClusterSentry

./: LICENSE  README.md
agent/: CMakeLists.txt
agent/coordinator/: coordinator.py  requirements.txt
agent/coordinator/src/: ai_engine.py  recovery.py
agent/include/: ring_buffer.h
agent/src/: agent.cpp  telementry.h
agent/src/injestion/: CmMakeLists.txt
agent/src/injestion/src/: injestion.cpp
agent/tests/: test_ai.py  test_events.py
agent/ui/public/: package.json
agent/ui/public/src/: Dashboard.js  styles.css
ci/: github-workflow.yml   
diagrams/: architecture.mmd  
docs/: system_design.md   
scripts/: setup_test_environment.sh
src/common/: cluster_topology_manager.py  configuration_manager.py
src/monitoring/: anomaly_detection.py  health_monitor.cpp
src/recovery/: recovery_orchestrator.py  state_manager.py
src/testing/: fault_testing.py
