cmake_minimum_required(VERSION 3.10)
project(ClusterSentryAgent CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(ZMQ REQUIRED)
find_package(ZLIB REQUIRED)
add_executable(agent src/agent.cpp)
target_include_directories(agent PRIVATE include src)
target_link_libraries(agent zmq z)
target_compile_options(agent PRIVATE -O3)

